// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_2 and locale is DE 1`] = `
{
  "modes": {
    "Clam Blitz": "Muschelchaos",
    "Rainmaker": "Operation Goldfisch",
    "Splat Zones": "Herrschaft",
    "Tower Control": "Turmkommando",
    "Turf War": "Revierkampf",
    "Unknown Mode": "Unbekannte Kampfart",
  },
  "stages": {
    "Ancho-V Games": "Anchobit Games HQ",
    "Arowana Mall": "Arowana Center",
    "Blackbelly Skatepark": "Punkasius-Skatepark",
    "Camp Triggerfish": "Camp Schützenfisch",
    "Counterpick": "Counterpick",
    "Goby Arena": "Backfisch-Stadion",
    "Humpback Pump Track": "Buckelwal-Piste",
    "Inkblot Art Academy": "Perlmutt-Akademie",
    "Kelp Dome": "Tümmlerkuppel",
    "MakoMart": "Cetacea-Markt",
    "Manta Maria": "Manta Maria",
    "Moray Towers": "Muränentürme",
    "Musselforge Fitness": "Molluskelbude",
    "New Albacore Hotel": "Hotel Neothun",
    "Piranha Pit": "Steinköhler-Grube",
    "Port Mackerel": "Heilbutt-Hafen",
    "Shellendorf Institute": "Abyssal-Museum",
    "Shifty Station": "Wandelzone",
    "Skipper Pavilion": "Grundel-Pavillon",
    "Snapper Canal": "Grätenkanal",
    "Starfish Mainstage": "Seeigel-Rockbühne",
    "Sturgeon Shipyard": "Störwerft",
    "The Reef": "Korallenviertel",
    "Unknown Stage": "Unbekannte Arena",
    "Wahoo World": "Flunder-Funpark",
    "Walleye Warehouse": "Kofferfisch-Lager",
  },
}
`;

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_2 and locale is EN 1`] = `
{
  "modes": {
    "Clam Blitz": "Clam Blitz",
    "Rainmaker": "Rainmaker",
    "Splat Zones": "Splat Zones",
    "Tower Control": "Tower Control",
    "Turf War": "Turf War",
    "Unknown Mode": "Unknown Mode",
  },
  "stages": {
    "Ancho-V Games": "Ancho-V Games",
    "Arowana Mall": "Arowana Mall",
    "Blackbelly Skatepark": "Blackbelly Skatepark",
    "Camp Triggerfish": "Camp Triggerfish",
    "Counterpick": "Counterpick",
    "Goby Arena": "Goby Arena",
    "Humpback Pump Track": "Humpback Pump Track",
    "Inkblot Art Academy": "Inkblot Art Academy",
    "Kelp Dome": "Kelp Dome",
    "MakoMart": "MakoMart",
    "Manta Maria": "Manta Maria",
    "Moray Towers": "Moray Towers",
    "Musselforge Fitness": "Musselforge Fitness",
    "New Albacore Hotel": "New Albacore Hotel",
    "Piranha Pit": "Piranha Pit",
    "Port Mackerel": "Port Mackerel",
    "Shellendorf Institute": "Shellendorf Institute",
    "Shifty Station": "Shifty Station",
    "Skipper Pavilion": "Skipper Pavilion",
    "Snapper Canal": "Snapper Canal",
    "Starfish Mainstage": "Starfish Mainstage",
    "Sturgeon Shipyard": "Sturgeon Shipyard",
    "The Reef": "The Reef",
    "Unknown Stage": "Unknown Stage",
    "Wahoo World": "Wahoo World",
    "Walleye Warehouse": "Walleye Warehouse",
  },
}
`;

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_2 and locale is EU_FR 1`] = `
{
  "modes": {
    "Clam Blitz": "Pluie de palourdes",
    "Rainmaker": "Mission Bazookarpe",
    "Splat Zones": "Défense de zone",
    "Tower Control": "Expédition risquée",
    "Turf War": "Guerre de territoire",
    "Unknown Mode": "Mode à déterminer",
  },
  "stages": {
    "Ancho-V Games": "Tentatec Studio",
    "Arowana Mall": "Centre Arowana",
    "Blackbelly Skatepark": "Skatepark Mako",
    "Camp Triggerfish": "Hippo-Camping",
    "Counterpick": "Counterpick",
    "Goby Arena": "Stade Bernique",
    "Humpback Pump Track": "Piste Méroule",
    "Inkblot Art Academy": "Institut Calam'arts",
    "Kelp Dome": "Serre Goémon",
    "MakoMart": "Supermarché Cétacé",
    "Manta Maria": "Manta Maria",
    "Moray Towers": "Tours Girelle",
    "Musselforge Fitness": "Gymnase Ancrage",
    "New Albacore Hotel": "Hôtel Atoll",
    "Piranha Pit": "Carrière Caviar",
    "Port Mackerel": "Docks Haddock",
    "Shellendorf Institute": "Galerie des abysses",
    "Shifty Station": "Plateforme polymorphe",
    "Skipper Pavilion": "Lagune aux gobies",
    "Snapper Canal": "Canalamar",
    "Starfish Mainstage": "Scène Sirène",
    "Sturgeon Shipyard": "Chantier Narval",
    "The Reef": "Allées salées",
    "Unknown Stage": "Stage à déterminer",
    "Wahoo World": "Parc Carapince",
    "Walleye Warehouse": "Encrepôt",
  },
}
`;

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_2 and locale is JA 1`] = `
{
  "modes": {
    "Clam Blitz": "ガチアサリ",
    "Rainmaker": "ガチホコバトル",
    "Splat Zones": "ガチエリア",
    "Tower Control": "ガチヤグラ",
    "Turf War": "ナワバリバトル",
    "Unknown Mode": "ルール未選択",
  },
  "stages": {
    "Ancho-V Games": "アンチョビットゲームズ",
    "Arowana Mall": "アロワナモール",
    "Blackbelly Skatepark": "Ｂバスパーク",
    "Camp Triggerfish": "モンガラキャンプ場",
    "Counterpick": "カウンターピック",
    "Goby Arena": "アジフライスタジアム",
    "Humpback Pump Track": "コンブトラック",
    "Inkblot Art Academy": "海女美術大学",
    "Kelp Dome": "モズク農園",
    "MakoMart": "ザトウマーケット",
    "Manta Maria": "マンタマリア号",
    "Moray Towers": "タチウオパーキング",
    "Musselforge Fitness": "フジツボスポーツクラブ",
    "New Albacore Hotel": "ホテルニューオートロ",
    "Piranha Pit": "ショッツル鉱山",
    "Port Mackerel": "ホッケふ頭",
    "Shellendorf Institute": "デボン海洋博物館",
    "Shifty Station": "ミステリーゾーン",
    "Skipper Pavilion": "ムツゴ楼",
    "Snapper Canal": "エンガワ河川敷",
    "Starfish Mainstage": "ガンガゼ野外音楽堂",
    "Sturgeon Shipyard": "チョウザメ造船",
    "The Reef": "バッテラストリート",
    "Unknown Stage": "ステージ未選択",
    "Wahoo World": "スメーシーワールド",
    "Walleye Warehouse": "ハコフグ倉庫",
  },
}
`;

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_3 and locale is DE 1`] = `
{
  "modes": {
    "Clam Blitz": "Muschelchaos",
    "Rainmaker": "Operation Goldfisch",
    "Splat Zones": "Herrschaft",
    "Tower Control": "Turmkommando",
    "Turf War": "Revierkampf",
    "Unknown Mode": "Unbekannte Kampfart",
  },
  "stages": {
    "Barnacle & Dime": "Talerfisch & Pock",
    "Bluefin Depot": "Blauflossen-Depot",
    "Brinewater Springs": "Kusaya-Quellen",
    "Counterpick": "Counterpick",
    "Crableg Capital": "Majidae Skyline",
    "Eeltail Alley": "Streifenaal-Straße",
    "Flounder Heights": "Schollensiedlung",
    "Hagglefish Market": "Schnapperchen-Basar",
    "Hammerhead Bridge": "Makrelenbrücke",
    "Humpback Pump Track": "Buckelwal-Piste",
    "Inkblot Art Academy": "Perlmutt-Akademie",
    "Mahi-Mahi Resort": "Mahi-Mahi-Resort",
    "MakoMart": "Cetacea-Markt",
    "Manta Maria": "Manta Maria",
    "Marlin Airport": "La Ola Airport",
    "Mincemeat Metalworks": "Aalstahl-Metallwerk",
    "Museum d'Alfonsino": "Pinakoithek",
    "Robo ROM-en": "ROM & RAMen",
    "Scorch Gorge": "Sengkluft",
    "Shipshape Cargo Co.": "Cargo Ship Heavyfish",
    "Sturgeon Shipyard": "Störwerft",
    "Um'ami Ruins": "Um'ami-Ruinen",
    "Undertow Spillway": "Schwertmuschel-Reservoir",
    "Unknown Stage": "Unbekannte Arena",
    "Wahoo World": "Flunder-Funpark",
  },
}
`;

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_3 and locale is EN 1`] = `
{
  "modes": {
    "Clam Blitz": "Clam Blitz",
    "Rainmaker": "Rainmaker",
    "Splat Zones": "Splat Zones",
    "Tower Control": "Tower Control",
    "Turf War": "Turf War",
    "Unknown Mode": "Unknown Mode",
  },
  "stages": {
    "Barnacle & Dime": "Barnacle & Dime",
    "Bluefin Depot": "Bluefin Depot",
    "Brinewater Springs": "Brinewater Springs",
    "Counterpick": "Counterpick",
    "Crableg Capital": "Crableg Capital",
    "Eeltail Alley": "Eeltail Alley",
    "Flounder Heights": "Flounder Heights",
    "Hagglefish Market": "Hagglefish Market",
    "Hammerhead Bridge": "Hammerhead Bridge",
    "Humpback Pump Track": "Humpback Pump Track",
    "Inkblot Art Academy": "Inkblot Art Academy",
    "Mahi-Mahi Resort": "Mahi-Mahi Resort",
    "MakoMart": "MakoMart",
    "Manta Maria": "Manta Maria",
    "Marlin Airport": "Marlin Airport",
    "Mincemeat Metalworks": "Mincemeat Metalworks",
    "Museum d'Alfonsino": "Museum d'Alfonsino",
    "Robo ROM-en": "Robo ROM-en",
    "Scorch Gorge": "Scorch Gorge",
    "Shipshape Cargo Co.": "Shipshape Cargo Co.",
    "Sturgeon Shipyard": "Sturgeon Shipyard",
    "Um'ami Ruins": "Um'ami Ruins",
    "Undertow Spillway": "Undertow Spillway",
    "Unknown Stage": "Unknown Stage",
    "Wahoo World": "Wahoo World",
  },
}
`;

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_3 and locale is EU_FR 1`] = `
{
  "modes": {
    "Clam Blitz": "Pluie de palourdes",
    "Rainmaker": "Mission Bazookarpe",
    "Splat Zones": "Défense de zone",
    "Tower Control": "Expédition risquée",
    "Turf War": "Guerre de territoire",
    "Unknown Mode": "Mode à déterminer",
  },
  "stages": {
    "Barnacle & Dime": "Halles de Port-merlu",
    "Bluefin Depot": "Mine Marine",
    "Brinewater Springs": "Sources Sauret",
    "Counterpick": "Counterpick",
    "Crableg Capital": "Quartier Crabe-ciels",
    "Eeltail Alley": "Banlieue Balibot",
    "Flounder Heights": "Lotissement Filament",
    "Hagglefish Market": "Marché Grefin",
    "Hammerhead Bridge": "Pont Esturgeon",
    "Humpback Pump Track": "Piste Méroule",
    "Inkblot Art Academy": "Institut Calam'arts",
    "Mahi-Mahi Resort": "Club Ca$halot",
    "MakoMart": "Supermarché Cétacé",
    "Manta Maria": "Manta Maria",
    "Marlin Airport": "Terminal Rorqual",
    "Mincemeat Metalworks": "Casse Rascasse",
    "Museum d'Alfonsino": "Galeries Guppy",
    "Robo ROM-en": "Arène Méca-ramen",
    "Scorch Gorge": "Canyon aux colonnes",
    "Shipshape Cargo Co.": "Chaland Flétan",
    "Sturgeon Shipyard": "Chantier Narval",
    "Um'ami Ruins": "Ruines Uma'mi",
    "Undertow Spillway": "Réservoir Rigadelle",
    "Unknown Stage": "Stage à déterminer",
    "Wahoo World": "Parc Carapince",
  },
}
`;

exports[`LocaleInfoService updateLocaleInfo generates expected locale info when game version is SPLATOON_3 and locale is JA 1`] = `
{
  "modes": {
    "Clam Blitz": "ガチアサリ",
    "Rainmaker": "ガチホコバトル",
    "Splat Zones": "ガチエリア",
    "Tower Control": "ガチヤグラ",
    "Turf War": "ナワバリバトル",
    "Unknown Mode": "ルール未選択",
  },
  "stages": {
    "Barnacle & Dime": "タラポートショッピングパーク",
    "Bluefin Depot": "ネギトロ炭鉱",
    "Brinewater Springs": "クサヤ温泉",
    "Counterpick": "カウンターピック",
    "Crableg Capital": "タカアシ経済特区",
    "Eeltail Alley": "ゴンズイ地区",
    "Flounder Heights": "ヒラメが丘団地",
    "Hagglefish Market": "ヤガラ市場",
    "Hammerhead Bridge": "マサバ海峡大橋",
    "Humpback Pump Track": "コンブトラック",
    "Inkblot Art Academy": "海女美術大学",
    "Mahi-Mahi Resort": "マヒマヒリゾート＆スパ",
    "MakoMart": "ザトウマーケット",
    "Manta Maria": "マンタマリア号",
    "Marlin Airport": "カジキ空港",
    "Mincemeat Metalworks": "ナメロウ金属",
    "Museum d'Alfonsino": "キンメダイ美術館",
    "Robo ROM-en": "バイガイ亭",
    "Scorch Gorge": "ユノハナ大渓谷",
    "Shipshape Cargo Co.": "オヒョウ海運",
    "Sturgeon Shipyard": "チョウザメ造船",
    "Um'ami Ruins": "ナンプラー遺跡",
    "Undertow Spillway": "マテガイ放水路",
    "Unknown Stage": "ステージ未選択",
    "Wahoo World": "スメーシーワールド",
  },
}
`;
